# mcp2plugin

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude-plugin/: marketplace.json
openspec/changes/archive/2026-01-15-add-mcp-to-plugin-converter/: proposal.md  tasks.md
openspec/changes/archive/2026-01-15-add-mcp-to-plugin-converter/specs/mcp-plugin-converter/: spec.md
openspec/specs/mcp-plugin-converter/: spec.md
plugins/docs-crawler/.claude-plugin/: plugin.json
plugins/gemini-cli/.claude-plugin/: plugin.json
plugins/repomix/.claude-plugin/: plugin.json
plugins/sequential-thinking/.claude-plugin/: plugin.json
src/mcp2plugin/: __init__.py  cli.py
src/mcp2plugin/core/: __init__.py  converter.py  marketplace.py  plugin_generator.py
src/mcp2plugin/llm/: __init__.py  gemini.py
src/mcp2plugin/models/: __init__.py  mcp_info.py  plugin.py
src/mcp2plugin/sources/: __init__.py  base.py  fastmcp.py  smithery.py
src/mcp2plugin/utils/: __init__.py  url_parser.py
workers/: package-lock.json  package.json  tsconfig.json  wrangler.toml
workers/src/: index.ts
